syntax = "proto3";

package cloud.disk_manager;

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/api;disk_manager";

message ErrorDetails {
    int64 code = 1;
    string message = 2;
    bool internal = 3;
}
