syntax = "proto3";

package disks;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/services/disks/protos";

////////////////////////////////////////////////////////////////////////////////

message AlterDiskRequest {
    types.Disk Disk = 1;
    string CloudId = 2;
    string FolderId = 3;
}

message AlterDiskTaskState {}
